--- a/randomPokemon.html
+++ b/randomPokemon.html
@@ -14,32 +14,45 @@
 
   <script>
 
+    const root = document.getElementById('root');
     const body = document.getElementsByTagName('body');
     const btn = document.createElement('button');
 
     body[0].appendChild(btn);
-
-
-    console.dir(btn);
     btn.style.width = "50px"
     btn.style.height = "30px"
     btn.textContent = "얍";
+
     const h1 = document.createElement('h1');
     let img = document.createElement('img');
+
     root.append(h1, img);
+    let num = Math.floor((Math.random() * 1010)) + 1
 
+    const xhr = new XMLHttpRequest();
+    const _URL = `https://pokeapi.co/api/v2/pokemon/${num}`;
 
+    xhr.open('GET', _URL);
+    xhr.send();
+
+    xhr.addEventListener('load', function () {
+      // console.log(xhr.response);
+      const _PokeData = JSON.parse(xhr.response);
+      console.dir(_PokeData)
+
+      const imgURL = _PokeData.sprites.front_default;
+
+      h1.textContent = _PokeData.name;
+      img.setAttribute("src", imgURL);
+
+    });
 
     btn.addEventListener('click', function () {
-
-
-      const root = document.getElementById('root');
 
       let num = Math.floor((Math.random() * 1010)) + 1
 
       const xhr = new XMLHttpRequest();
       const _URL = `https://pokeapi.co/api/v2/pokemon/${num}`;
-
 
       xhr.open('GET', _URL);
       xhr.send();
