배경색 추가

--- a/randomPokemon.html
+++ b/randomPokemon.html
@@ -24,7 +24,10 @@
     btn.textContent = "얍";
 
     const h1 = document.createElement('h1');
+    h1.style.backgroundColor = "red";
     let img = document.createElement('img');
+    img.style.backgroundColor = "gray";
+    
 
     root.append(h1, img);
     let num = Math.floor((Math.random() * 1010)) + 1
